--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="button2_send">Book Appointment</string>
     <string name="button_doctorUpcomingApp">Upcoming Appointment</string>
     <string name="button_doctorViewSchedule">My Schedule</string>
+    <string name="banner">Clinic Online</string>
 </resources>
