--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Medical_Clinic</string>
+    <string name="app_name">Medical Clinic</string>
     <string name="button_send">Upcoming Appointment</string>
     <string name="button2_send">Book Appointment</string>
     <string name="button_doctorUpcomingApp">Upcoming Appointment</string>
